Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
-\title{GRS60312RemoteSensingAndGISIntergrationIDVPortfolio}
+\title{Remote Sensing and GIS Integration Portfolio}
 \author{Robert Vlasakker, van de}
 \date{June 2021}
 
@@ -9,6 +9,35 @@
 
 \maketitle
 
-\section{Introduction}
+\section{Interactive Map I}
+\textbf{Course Name \& Code.}
+This interactive map was made for a master student that had trouble with Python Folium maps. 
+So it has no specific course name and course code. 
+It was for a master thesis internship for the study Forest and Nature Conservation.
+\\
 
+\noindent
+\textbf{Description of the Application.}
+The interactive map contains the location of cows over time as a heat map. 
+Each cow had a GNNS sensor that reports the location every hour.
+This map now shows the location of all the cows every hour. 
+The time interval is set quite high as the sensors cover about three weeks of information (so the total amount of timestamps will be the amount of hours in three weeks.
+\\
+
+\noindent
+\textbf{Description \& Requirements of Users}
+The potential users of the map were the master student and the viewers of the student's presentation.
+The maps was used for a presentation to see how the cows moved through the park over time.
+The watcher of the presentation were mostly managers of the park. 
+This was a initial map to check to cows location. 
+The main goal of the master internship was to locate high risk areas of the park.
+A high risk area was defined as an area where cows and recreational users of the park were close.
+\\
+
+\textbf{Pupose of your visualization}
+The purpose of the interactive map was to see how the cows moved over time through the park to get an initial idea where the cows were.
 \end{document}
+
+
+
+https://github.com/RobertvdV/GRS60312_RemoteSensingAndGISIntergration_IDV_Portfolio/blob/master/data/processed/HeathMapPerDag.html
